--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<nav>
 			<h2 class="logo"> <marquee>ANKIT <span>DHUNGANA </marquee></span></h2>
 			<ul>
-				<li><a href="website.html">HOME</a></li>
+				<li><a href="/">HOME</a></li>
 				<li><a target="_blank" href="about.html">ABOUT</a></li>
 				<li><a target="_blank" href="gallery.html">GALLERY</a></li>
 				<li><a target="_blank" href="contact.html">CONTACT</a></li>
