--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
       >
-<body background="ankit.jpg" style="background-size: 100%;background-repeat: no-repeat">
+<body background="ankit.jpg" style="background-size: 100%;background-repeat: no-repeat;">
 	<div class="hero">
 		<nav>
 			<h2 class="logo"> <marquee>ANKIT <span>DHUNGANA </marquee></span></h2>
