--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="about-style.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
-<body background="me.jpg" style="background-size:cover;,background-repeat: no-repeat;>
+<body background="me.jpg" style="background-size: cover;background-repeat: no-repeat;"
 		<h1>  LET ME INTRODUCE MYSELF...</h1>
 	<p>I'm a Ankit Dhungana from country Nepal. <br>Born in 1995 AD <br></p>
 	
